got plain language answer summar of sql from second LLM request

--- a/ccrb_notebook_v1.ipynb
+++ b/ccrb_notebook_v1.ipynb
@@ -12,7 +12,7 @@
     "1. To make a tool that reads a CSV of the CCRB database\n",
     "2. Adds the data to a SQL database\n",
     "3. Uses an LLM to convert human questions into SQL queries\n",
-    "4. Uses a SQL platform like Postgres to perform the query \n",
+    "4. Uses a SQL platform like DuckDB to perform the query \n",
     "5. Uses an LLM to make the returned answer into a human readable response and presents it to the user"
    ]
   },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "id": "98ae9ddc",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "id": "bdffc09b",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "id": "152a174e",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "id": "82018872",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "Name: count, Length: 12857, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "id": "38c73435",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "id": "66bb8a2b",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
        "Name: count, Length: 12857, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "id": "1d2d4f81",
    "metadata": {},
    "outputs": [
@@ -447,25 +447,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "id": "a2b3620a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_question = \"What is the full name of the officer implicated in the most recent complaint?\""
+    "user_question = \"Which officer has the most incidents against them? Give me their full name. Ignore the badge number 0\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1931ae4c",
+   "id": "0beff256",
    "metadata": {},
    "source": [
-    "### Create Prompt for LLM"
+    "### Create prompt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "id": "e460a25e",
    "metadata": {},
    "outputs": [],
@@ -496,19 +496,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "id": "61789793",
    "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
+    "from portkey_ai import Portkey\n",
     "load_dotenv()\n",
     "portkey_api_key = os.getenv('PORTKEY_API_KEY')\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1931ae4c",
+   "metadata": {},
+   "source": [
+    "### Convert Prompt to SQL"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "id": "365ffa26",
    "metadata": {},
    "outputs": [
@@ -516,16 +525,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SELECT firstname || ' ' || lastname AS full_name\n",
+      "SELECT firstname, lastname\n",
       "FROM df_relation\n",
-      "ORDER BY incidentdate DESC\n",
+      "WHERE shieldno <> 0\n",
+      "GROUP BY firstname, lastname\n",
+      "ORDER BY COUNT(complaintid) DESC\n",
       "LIMIT 1;\n"
      ]
     }
    ],
    "source": [
-    "from portkey_ai import Portkey\n",
-    "\n",
     "portkey = Portkey(\n",
     "  base_url = \"https://ai-gateway.apps.cloud.rt.nyu.edu/v1\",\n",
     "  api_key = portkey_api_key\n",
@@ -546,36 +555,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "00e46ed6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "┌─────────────────┐\n",
-       "│    full_name    │\n",
-       "│     varchar     │\n",
-       "├─────────────────┤\n",
-       "│ Taylor Ruscillo │\n",
-       "└─────────────────┘"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sql_query = response.choices[0].message.content\n",
     "\n",
-    "db = duckdb.sql(sql_query)\n",
-    "db"
+    "sql_result = duckdb.sql(sql_query)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9014313c",
+   "metadata": {},
+   "source": [
+    "### Check size of SQL response to not overwhelm response LLM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "d0fbe781",
    "metadata": {},
    "outputs": [],
@@ -590,32 +590,103 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "6a91a974",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_rows = len(sql_result)\n",
+    "# renaming in case the result is too big\n",
+    "query_result = sql_result\n",
+    "clamped_result = False \n",
+    "\n",
+    "if total_rows > 20:\n",
+    "    query_result = duckdb.sql(\"SELECT * FROM query_result LIMIT 20\").fetchdf()\n",
+    "    campled_result = True\n",
+    "\n",
+    "# if clamped result pass full sql_result as an optional csv download?"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fd1f0d8f",
    "metadata": {},
    "source": [
-    "#### Prompt Structure"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0553f86b",
-   "metadata": {},
-   "source": [
-    "lawyer emily ponder williams\n",
-    "how can i verify this - show results CSV \n",
-    "\n",
-    "\n",
-    "I’d also like to flag that we are scheduled to present on Friday March 27 for NYC Open Data Week (in addition to the hackathon!) and the CCRB dataset is one of the main Open Data use cases we want to present on and emphasize \n"
+    "#### Prompt for plain language answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "490c3cbc",
+   "execution_count": 76,
+   "id": "8f6e3569",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sql_to_text_prompt = f\"\"\"\n",
+    "You are a data analyst.\n",
+    "Your task is to translate SQL query results into clear, concise plain English.\n",
+    "The explanation must:\n",
+    "- Directly answer the user's question.\n",
+    "- Be fact-based and only use the data provided.\n",
+    "- Not invent additional statistics.\n",
+    "- Not speculate beyond the result.\n",
+    "- Not mention SQL.\n",
+    "- Not mention tables or schemas.\n",
+    "- Not include markdown formatting.\n",
+    "- Not include backticks.\n",
+    "- Be written in complete sentences.\n",
+    "- Use only the provided SQL result.\n",
+    "- Do not guess missing values.\n",
+    "- If the result is empty, clearly state that no records matched the criteria.\n",
+    "- If NULL values appear, explain that data was missing.\n",
+    "- If the result is a single value, respond with a direct sentence that states the value clearly.\n",
+    "- If multiple rows are returned, summarize key patterns, identify highest/lowest values if relevant, mention totals only if explicitly present, and keep the response under 5 sentences unless trends require more. If the result indicates additional rows beyond what is shown, acknowledge the total count when summarizing.\n",
+    "\n",
+    "User question:\n",
+    "{user_question}\n",
+    "SQL query:\n",
+    "{sql_query}\n",
+    "Query result:\n",
+    "{query_result}\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "a95217b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql_to_text_response = portkey.chat.completions.create(\n",
+    "    model = \"@openai-nyu-it-d-5b382a/gpt-4o-mini\",\n",
+    "    messages = [\n",
+    "      {\"role\": \"system\", \"content\": \"You are a precise data analyst who explains query results in plain English. You stick strictly to the data provided, never speculate, and always write in clear, concise sentences.\"},\n",
+    "      {\"role\": \"user\", \"content\": sql_to_text_prompt}\n",
+    "    ],\n",
+    "    MAX_TOKENS = 512,\n",
+    "    temperature=0\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "0093508e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The officer with the most incidents against them is Robert Rodriguez.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sql_to_text_response.choices[0].message.content)"
+   ]
   }
  ],
  "metadata": {
